# llmaker

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
demo/: demo.mkr
src/: backend.rs  error.rs  frontend.rs  main.rs  types.rs
src/backend/: headstr.rs  parse_fn.rs  parse_token.rs
src/frontend/: lexer.rs  parse.mkr  parse.rs
