[package]
name = "llmaker"
version = "0.0.1"
authors = ["puripuri2100 <puripuri2100@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Make LL(1) token parser code for Rust."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
